[package]
name = "bundler-balancer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
awc = "2.0.3"
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
psutil = "3.2.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-actix-native-tls" ] }
